--- a/Game/Views/Shared/_Layout.cshtml
+++ b/Game/Views/Shared/_Layout.cshtml
@@ -22,8 +22,12 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Users", "Index", "User")</li>
-                            <li>@Html.ActionLink("Game", "Index", "Game")</li>
+
+                            @if (Request.IsAuthenticated) {                                
+                                <li>@Html.ActionLink("Users", "Index", "User")</li>
+                                <li>@Html.ActionLink("Game", "Index", "Game")</li>                                
+                            }
+                            
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>
