--- a/Game/Views/Shared/_Layout.cshtml
+++ b/Game/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("GEO GAME", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -25,11 +25,11 @@
 
                             @if (Request.IsAuthenticated) {                                
                                 <li>@Html.ActionLink("Users", "Index", "User")</li>
-                                <li>@Html.ActionLink("Game", "Index", "Game")</li>                                
+                                <li>@Html.ActionLink("Game", "Index", "Game")</li>
+                                <li>@Html.ActionLink("My Pictures", "Index", "Photo")</li>                               
                             }
                             
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
                         </ul>
                     </nav>
                 </div>
