--- a/Game/Views/Game/Index.cshtml
+++ b/Game/Views/Game/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-@Html.ActionLink("Game Start", "Start", "Game")
-<br />
-@Html.ActionLink("Upload Photo", "Upload", "Photo")
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>
+<script>
+   
+</script>
+<div id="map-canvas"></div>
+<h2>The Image</h2>
