--- a/Game/Views/Game/Index.cshtml
+++ b/Game/Views/Game/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Index";
+
 }
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>
 <script>
@@ -7,3 +8,4 @@
 </script>
 <div id="map-canvas"></div>
 <h2>The Image</h2>
+distance = @ViewBag.distance
