--- a/Game/Views/Shared/_Layout.cshtml
+++ b/Game/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
             </div>
         </header>
         <div id="body">
+            <div id="fb-root"></div>
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
