--- a/Game/Content/Site.css
+++ b/Game/Content/Site.css
@@ -586,9 +586,11 @@ tr.pager td {
     padding: 0 0.25em 0 0;
 }
 #map-canvas {
-        width: 60%;
+        width: 50%;
         height: 400px;
         background-color: #CCC;
+        position: relative;
+        float:left;
     }
 
 /********************
@@ -759,11 +761,37 @@ tr.pager td {
     }
 
     #map-canvas {
-        width: 100%;
+        width: 40%;
 
     }
 }
 .myPictures{
-    max-height: 200px;
-    max-width:200px;
+    max-height: 150px;
+    max-width: 30%;
+}
+.gameContainer{
+    width: 100%;
+    height: 400px;
+}
+.imageContainer{
+    width:50%;
+    position:relative;
+    float:right;
+    text-align: center;
+}
+.img{
+    position:relative;
+    max-width: 100%;
+    max-height: 300px;
+    top: 0px;
+    text-align: center;
+    margin: 0 auto;
+}
+.img img{
+     max-width: 100%;
+     max-height: 300px;
+}
+input.answere{
+    padding:10px;
+    margin: 40px auto;
 }
